--- a/Popup.html
+++ b/Popup.html
@@ -120,7 +120,7 @@ p {
 
 
 <div class="container">
-  <div><img src="">
+  <div><img src="https://github.com/adiprdn21/Coding-Challenge/blob/main/Mountain.jpg?raw=true">
   <h2>Top Winter Locations</h2>
   <span class="sub">a</span>
   <p>a</p>
@@ -133,7 +133,7 @@ p {
 <div id="popupbox" class="popup">
   <div class="popup-content">
     <span class="close">&times;</span>
-      <img src="" width="100%">
+      <img src="https://github.com/adiprdn21/Coding-Challenge/blob/main/Mountain.jpg?raw=true" width="100%">
       <h2>Lorem ipsum</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
