--- a/flexpopup.html
+++ b/flexpopup.html
@@ -184,7 +184,7 @@ align-items: flex-start;
   <span style="float: right"><i class="arrow down"></i></span>
   </div>
   </div>
-  <div><img src="https://raw.githubusercontent.com/adiprdn21/Coding-Challenge/main/Mountain.jpg">
+  <div><img src="https://github.com/adiprdn21/Coding-Challenge/blob/main/roadtrip.jpg?raw=true">
   <h2>Top Eastern Roadtrip</h2>
   <span class="sub">Lorem Ipsum</span>
   
@@ -202,7 +202,7 @@ align-items: flex-start;
         <span class="duration">Lorem Ipsum</span>
         </div>
     </div>
-    <img src="https://raw.githubusercontent.com/adiprdn21/Coding-Challenge/main/Mountain.jpg">
+    <img src="https://raw.githubusercontent.com/adiprdn21/Coding-Challenge/main/20200629164327000000Untitleddesign4.jpg">
   <h2>Kangaroo Valley Safari</h2>
   <span class="sub">Lorem Ipsum</span>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>  
@@ -229,7 +229,7 @@ align-items: flex-start;
 <div id="popupbox2" class="popup">
   <div class="popup-content">
     <span class="close">&times;</span>
-      <img src="https://raw.githubusercontent.com/adiprdn21/Coding-Challenge/main/Mountain.jpg">
+      <img src="https://github.com/adiprdn21/Coding-Challenge/blob/main/roadtrip.jpg?raw=true">
       <h2>Top Eastern Road Trip</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
